--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,5 @@ repos:
   rev: v1.98.0 # Get the latest from: https://github.com/antonbabenko/pre-commit-terraform/releases
   hooks:
     - id: terraform_fmt
+    - id: terraform_validate
     - id: terraform_docs
-      args:
-        - 'markdown table --output-file README.md --output-mode inject .'
